[package]
name = "razel-bzl-api"
version = "0.1.0"
edition = "2021"
description = "razelv4 Starlark-evaluation seam: the BzlEvaluator trait + a codec-neutral value model (role: api)."

[dependencies]
# none — the eval seam is self-contained; a concrete evaluator (starlark-rust) lives behind it in an impl.
