[package]
name = "razel-bzl-api"
version = "0.1.0"
edition = "2021"
description = "razelv4 Starlark-evaluation seam: the BzlEvaluator trait + a codec-neutral value model (role: api)."
license = "MIT OR Apache-2.0"

[dependencies]
# none — the eval seam is self-contained; a concrete evaluator (starlark-rust) lives behind it in an impl.

[features]
# RED-FIRST: drop the namespace byte + reserved bzl dim from the provider identity frame (the pre-lockdown
# name-only shape) → the reserved-dim codec gate (provider_identity_reserved_bzl_dim) must go red.
mutant_provider_digest_name_only = []
# RED-FIRST: swap the topological/preorder depset order codes → the byte-golden order-code table
# (depset_order_codes_pinned) must go red.
mutant_depset_order_code_swap = []
# RED-FIRST (phase-env lockdown, headline fold pair): drop the injected-builtins fold for EnvBuildBzl
# (fold-never — under-invalidation) → build_bzl_digest_includes_injected_builtins must go red.
mutant_builtins_digest_dropped_for_build = []
# RED-FIRST (phase-env lockdown, headline fold pair): fold the injected-builtins digest into EnvBzlmodBzl
# too (fold-always — repo-refetch over-invalidation) → bzlmod_bzl_digest_excludes_injected_builtins red.
mutant_builtins_digest_folded_for_bzlmod = []
# RED-FIRST (phase-env lockdown, key fact C): builtins injection silently ADDS a non-registered name
# instead of failing closed → builtins_injection_override_only must go red.
mutant_injection_adds_new_name = []
# RED-FIRST (T20 R-load-codec, tag 9): emit struct fields in DECLARATION order instead of name-sorted →
# two structs equal-but-for-kwargs-order digest differently (digest instability) → the canonical-order
# gate (struct_fields_canonical_sorted) must go red.
mutant_struct_fields_unsorted = []
# RED-FIRST (T20 R-load-codec, tag 10): collapse a FunctionRef to NAME-ONLY (drop module + defining_digest)
# → two same-named functions from different modules alias, and a body change stops re-fingerprinting →
# the function-identity gate (function_ref_carries_module_identity) must go red.
mutant_function_ref_drops_module = []
# RED-FIRST (T20 select, tag 15): emit a select's condition dict in DECLARATION order instead of
# label-sorted → two selects equal-but-for-condition-order digest differently (digest instability) →
# the canonical-order gate (select_frame_canonical_and_injective) must go red.
mutant_select_conditions_unsorted = []
